compiladoresProject/src/compiladoresProject/toyParser.java
/* toyParser.java */
/* Generated By:JavaCC: Do not edit this line. toyParser.java */
package compiladoresProject;

public class toyParser implements toyParserConstants {

  public static void main(String args[]) throws ParseException
    {
        toyParser parser = new toyParser(System.in);
        while (true)
        {
                parser.programa();

        }
    }

/** Aqui come�a a defini��o da gram�tica da Toy.
 * Cada s�mbolo n�o-terminal � escrito na nota��o de um m�todo.
 */
  static final public 
void programa() throws ParseException {
    jj_consume_token(PROGRAM);
    id();
    jj_consume_token(SEMICOLON);
    if (jj_2_1(2)) {
      declaracoes();
    } else if (jj_2_2(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    comando_composto();
    jj_consume_token(DOT);
}

  static final public void declaracoes() throws ParseException {
    declaracao();
    label_1:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_4(2)) {
        jj_consume_token(SEMICOLON);
        declaracao();
      } else if (jj_2_5(2)) {
        declaracao();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void declaracao() throws ParseException {
    if (jj_2_6(2)) {
      declaracao_variavel();
    } else if (jj_2_7(2)) {
      declaracao_constante();
    } else if (jj_2_8(2)) {
      declaracao_procedimento();
    } else if (jj_2_9(2)) {
      declaracao_funcao();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaracao_variavel() throws ParseException {
    jj_consume_token(VAR);
    lista_ids();
    jj_consume_token(COLON);
    alocacao();
    tipo();
}

  static final public void alocacao() throws ParseException {
    if (jj_2_10(2)) {
      jj_consume_token(STATIC);
    } else if (jj_2_11(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaracao_constante() throws ParseException {
    jj_consume_token(CONST);
    lista_ids();
    jj_consume_token(EQ);
    expressao();
}

  static final public void lista_ids() throws ParseException {
    id();
    label_2:
    while (true) {
      if (jj_2_12(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      id();
    }
}

  static final public void comando_composto() throws ParseException {
    jj_consume_token(BEGIN);
    if (jj_2_13(2)) {
      lista_comandos();
    } else if (jj_2_14(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(END);
}

  static final public void lista_comandos() throws ParseException {
    comando();
    label_3:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(SEMICOLON);
      comando();
    }
}

  static final public void comando() throws ParseException {
    if (jj_2_16(2)) {
      comando_composto();
    } else if (jj_2_17(2)) {
      comando_condicional();
    } else if (jj_2_18(2)) {
      comando_iterativo();
    } else if (jj_2_19(2)) {
      atribuicao();
    } else if (jj_2_20(2)) {
      chamada_procedimento();
    } else if (jj_2_21(2)) {
      chamada_funcao();
    } else if (jj_2_22(2)) {
      retorno_funcao();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comando_condicional() throws ParseException {
    jj_consume_token(IF);
    expressao();
    jj_consume_token(THEN);
    comando();
    if (jj_2_23(2)) {
      vazio();
    } else if (jj_2_24(2)) {
      jj_consume_token(ELSE);
      comando();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comando_iterativo() throws ParseException {
    if (jj_2_25(2)) {
      jj_consume_token(WHILE);
      expressao();
      jj_consume_token(DO);
      comando();
    } else if (jj_2_26(2)) {
      jj_consume_token(REPEAT);
      lista_comandos();
      jj_consume_token(UNTIL);
      expressao();
    } else if (jj_2_27(2)) {
      jj_consume_token(FOR);
      nome();
      jj_consume_token(ASSIGN);
      expressao();
      jj_consume_token(TO);
      expressao();
    } else if (jj_2_28(2)) {
      jj_consume_token(STEP);
      expressao();
      jj_consume_token(DO);
      comando();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void atribuicao() throws ParseException {
    nome();
    jj_consume_token(ASSIGN);
    expressao();
}

  static final public void chamada_procedimento() throws ParseException {
    id();
    jj_consume_token(LPAREN);
    if (jj_2_29(2)) {
      lista_expressoes();
    } else if (jj_2_30(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
}

  static final public void chamada_funcao() throws ParseException {
    id();
    jj_consume_token(LPAREN);
    if (jj_2_31(2)) {
      lista_expressoes();
    } else if (jj_2_32(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
}

  static final public void retorno_funcao() throws ParseException {
    jj_consume_token(RETURN);
    jj_consume_token(LPAREN);
    expressao();
    jj_consume_token(RPAREN);
}

  static final public void tipo() throws ParseException {
    if (jj_2_33(2)) {
      tipo_simples();
    } else if (jj_2_34(2)) {
      tipo_agregado();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void tipo_simples() throws ParseException {
    if (jj_2_35(2)) {
      jj_consume_token(FLOAT);
    } else if (jj_2_36(2)) {
      jj_consume_token(INTEGER);
    } else if (jj_2_37(2)) {
      jj_consume_token(BOOLEAN);
    } else if (jj_2_38(2)) {
      jj_consume_token(CHAR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void tipo_agregado() throws ParseException {
    agregado_homogeneo();
}

  static final public void agregado_homogeneo() throws ParseException {
    jj_consume_token(ARRAY);
    jj_consume_token(LBRACKET);
    expressao();
    jj_consume_token(RBRACKET);
    jj_consume_token(OF);
    tipo();
}

  static final public void lista_campos_mesmo_tipo() throws ParseException {
    lista_ids();
    jj_consume_token(COLON);
    tipo();
}

  static final public void lista_expressoes() throws ParseException {
    expressao();
    label_4:
    while (true) {
      if (jj_2_39(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMMA);
      expressao();
    }
}

  static final public void declaracao_procedimento() throws ParseException {
    jj_consume_token(PROCEDURE);
    id();
    jj_consume_token(LPAREN);
    if (jj_2_40(2)) {
      parametros();
    } else if (jj_2_41(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
    if (jj_2_42(2)) {
      declaracoes();
    } else if (jj_2_43(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    comando_composto();
}

  static final public void declaracao_funcao() throws ParseException {
    jj_consume_token(FUNCTION);
    id();
    jj_consume_token(LPAREN);
    if (jj_2_44(2)) {
      parametros();
    } else if (jj_2_45(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
    jj_consume_token(COLON);
    tipo_simples();
    jj_consume_token(SEMICOLON);
    if (jj_2_46(2)) {
      declaracoes();
    } else if (jj_2_47(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    comando_composto();
}

  static final public void parametros() throws ParseException {
    lista_campos_qualificados();
    label_5:
    while (true) {
      if (jj_2_48(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(SEMICOLON);
      lista_campos_qualificados();
    }
}

  static final public void lista_campos_qualificados() throws ParseException {
    if (jj_2_49(2)) {
      jj_consume_token(REF);
    } else if (jj_2_50(2)) {
      jj_consume_token(VALUE);
    } else if (jj_2_51(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    lista_campos_mesmo_tipo();
}

  static final public void expressao() throws ParseException {
    expressao_simples();
    if (jj_2_52(2)) {
      op_relacional();
      expressao_simples();
    } else if (jj_2_53(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void expressao_simples() throws ParseException {
    op_unario();
    termo();
    label_6:
    while (true) {
      if (jj_2_54(2)) {
        ;
      } else {
        break label_6;
      }
      op_aditivo();
      termo();
    }
}

  static final public void termo() throws ParseException {
    fator();
    label_7:
    while (true) {
      if (jj_2_55(2)) {
        ;
      } else {
        break label_7;
      }
      op_multiplicativo();
      fator();
    }
}

  static final public void fator() throws ParseException {
    if (jj_2_59(2)) {
      id();
      label_8:
      while (true) {
        if (jj_2_56(2)) {
          ;
        } else {
          break label_8;
        }
        jj_consume_token(LBRACKET);
        expressao();
        jj_consume_token(RBRACKET);
      }
    } else if (jj_2_60(2)) {
      jj_consume_token(LPAREN);
      if (jj_2_57(2)) {
        lista_expressoes();
      } else if (jj_2_58(2)) {
        vazio();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAREN);
    } else if (jj_2_61(2)) {
      literal();
    } else if (jj_2_62(2)) {
      jj_consume_token(NOT);
      fator();
    } else if (jj_2_63(2)) {
      jj_consume_token(LPAREN);
      expressao();
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void nome() throws ParseException {
    id();
    label_9:
    while (true) {
      if (jj_2_64(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(LBRACKET);
      expressao();
      jj_consume_token(RBRACKET);
    }
}

  static final public void op_relacional() throws ParseException {
    if (jj_2_65(2)) {
      jj_consume_token(EQ);
    } else if (jj_2_66(2)) {
      jj_consume_token(GT);
    } else if (jj_2_67(2)) {
      jj_consume_token(LT);
    } else if (jj_2_68(2)) {
      jj_consume_token(LE);
    } else if (jj_2_69(2)) {
      jj_consume_token(GE);
    } else if (jj_2_70(2)) {
      jj_consume_token(NE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void op_aditivo() throws ParseException {
    if (jj_2_71(2)) {
      jj_consume_token(PLUS);
    } else if (jj_2_72(2)) {
      jj_consume_token(MINUS);
    } else if (jj_2_73(2)) {
      jj_consume_token(OR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void op_multiplicativo() throws ParseException {
    if (jj_2_74(2)) {
      jj_consume_token(MULTIPLY);
    } else if (jj_2_75(2)) {
      jj_consume_token(DIVIDE);
    } else if (jj_2_76(2)) {
      jj_consume_token(MOD);
    } else if (jj_2_77(2)) {
      jj_consume_token(AND);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void op_unario() throws ParseException {
    if (jj_2_78(2)) {
      jj_consume_token(PLUS);
    } else if (jj_2_79(2)) {
      jj_consume_token(MINUS);
    } else if (jj_2_80(2)) {
      vazio();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void literal() throws ParseException {
    if (jj_2_81(2)) {
      numero_inteiro();
    } else if (jj_2_82(2)) {
      numero_float();
    } else if (jj_2_83(2)) {
      jj_consume_token(TRUE);
    } else if (jj_2_84(2)) {
      jj_consume_token(FALSE);
    } else if (jj_2_85(2)) {
      caracter();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void caracter() throws ParseException {
    jj_consume_token(QUOTES);
    jj_consume_token(QUALQUER_CARACTER);
    jj_consume_token(QUOTES);
}

  static final public void id() throws ParseException {
    jj_consume_token(LETRA);
    label_10:
    while (true) {
      if (jj_2_86(2)) {
        ;
      } else {
        break label_10;
      }
      if (jj_2_87(2)) {
        jj_consume_token(LETRA);
      } else if (jj_2_88(2)) {
        jj_consume_token(DIGITO);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void numero_inteiro() throws ParseException {
    jj_consume_token(DIGITO);
    label_11:
    while (true) {
      if (jj_2_89(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(DIGITO);
    }
}

  static final public void numero_float() throws ParseException {
    if (jj_2_92(2)) {
      numero_inteiro();
      jj_consume_token(DOT);
      if (jj_2_90(2)) {
        numero_inteiro();
      } else if (jj_2_91(2)) {
        vazio();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_93(2)) {
      jj_consume_token(DOT);
      numero_inteiro();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comentario() throws ParseException {
    jj_consume_token(LBRACE);
    jj_consume_token(SEQUANCIA_CARACTER_EXCETO_RBRACE);
    jj_consume_token(RBRACE);
}

  static final public void vazio() throws ParseException {
    jj_consume_token(LBRACE);
    jj_consume_token(RBRACE);
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_40()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_41()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_42()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_43()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }
